--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
     "framer-motion": "^11.0.3",
-    "lucide-react": "^0.344.0",
+    "lucide-react": "^0.522.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.20.1",
+    "react-spinners": "^0.17.0",
     "recharts": "^2.10.3",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^2.1.0",
     "wavesurfer.js": "^7.5.1",
     "zustand": "^4.4.7"
