--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.6",
+    "dotenv": "^17.0.0",
     "framer-motion": "^11.0.3",
     "lucide-react": "^0.522.0",
     "react": "^18.3.1",
